LEP-27 Validate API requests using swagger schema (#153)
